labs/labs-01/virtual-service-echo.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echo
spec:
  hosts:
  - "echo.workshop-01.frankcarta.com"
  gateways:
  - cf-system/istio-ingressgateway
  http:
  - route:
    - destination:
        host: echo-service
        port:
          number: 80
